--- a/app_rules.json
+++ b/app_rules.json
@@ -463,6 +463,21 @@
           "remarks": ""
         }
       ]
+    },
+    {
+      "packageName": "com.mimicry.mymusic",
+      "name": "拟声",
+      "rules": [
+        {
+          "startVersionCode": 0,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
+          "apiVersion": 0,
+          "useApi": false,
+          "getLyricType": 0,
+          "remarks": ""
+        }
+      ]
     }
   ],
   "appRulesVersion": 7,
