Support KDE Connect
跨设备同步歌词，但仅限于把歌词设置为媒体播放控件的标题

Signed-off-by: ghhccghk <2137610394@qq.com>

--- a/app/src/main/assets/app_rules.json
+++ b/app/src/main/assets/app_rules.json
@@ -493,6 +493,21 @@
           "remarks": ""
         }
       ]
+    },
+    {
+      "packageName": "org.kde.kdeconnect_tp",
+      "name": "KDE Connect",
+      "rules": [
+        {
+          "startVersionCode": 12000,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
+          "apiVersion": 0,
+          "useApi": false,
+          "getLyricType": 1,
+          "remarks": ""
+        }
+      ]
     }
   ],
   "appRulesVersion": 8,
