--- a/app_rules.json
+++ b/app_rules.json
@@ -493,8 +493,23 @@
           "remarks": ""
         }
       ]
+    },
+    {
+      "packageName": "org.kde.kdeconnect_tp",
+      "name": "KDE Connect",
+      "rules": [
+        {
+          "startVersionCode": 12000,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
+          "apiVersion": 0,
+          "useApi": false,
+          "getLyricType": 1,
+          "remarks": ""
+        }
+      ]
     }
   ],
-  "appRulesVersion": 8,
+  "appRulesVersion": 9,
   "version": 6
 }
