--- a/app_rules.json
+++ b/app_rules.json
@@ -142,7 +142,7 @@
           "apiVersion": 0,
           "useApi": false,
           "getLyricType": 0,
-          "remarks": ""
+          "remarks": "需在APP设置中打开状态栏歌词开关，如遇到开启开关无法显示歌词请issues带版本及官方签名apk反馈"
         }
       ]
     },
@@ -166,7 +166,7 @@
           "apiVersion": 0,
           "useApi": false,
           "getLyricType": 0,
-          "remarks": "需在APP设置中打开状态栏歌词开关"
+          "remarks": "需在APP设置中打开状态栏歌词开关，如遇到开启开关无法显示歌词请issues带版本及官方签名apk反馈"
         }
       ]
     },
@@ -543,6 +543,6 @@
       ]
     }
   ],
-  "appRulesVersion": 12,
-  "version": 9
+  "appRulesVersion": 13,
+  "version": 10
 }
