--- a/app/src/main/assets/app_rules.json
+++ b/app/src/main/assets/app_rules.json
@@ -541,8 +541,23 @@
           "remarks": ""
         }
       ]
+    },
+    {
+      "packageName": "org.akanework.gramophone",
+      "name": "Gramophone",
+      "rules": [
+        {
+          "startVersionCode": 14,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
+          "apiVersion": 6,
+          "useApi": true,
+          "getLyricType": 0,
+          "remarks": "请设置中打开开关"
+        }
+      ]
     }
   ],
-  "appRulesVersion": 13,
-  "version": 10
+  "appRulesVersion": 15,
+  "version": 12
 }
