修复pr action运行失败

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -50,6 +50,7 @@ jobs:
           ./gradlew bundleRelease
 
       - name: Deploy
+        if: ${{ github.event_name != 'pull_request' }}
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ github.token }}
