--- a/app/src/main/assets/app_rules.json
+++ b/app/src/main/assets/app_rules.json
@@ -592,6 +592,21 @@
           "remarks": "hook方法可能导致异常请注意，并同时解决定制应用无法启动"
         }
       ]
+    },
+    {
+      "packageName": "com.maxmpz.audioplayer",
+      "name": "Poweramp",
+      "rules": [
+        {
+          "startVersionCode": 0,
+          "endVersionCode": 2147483647,
+          "excludeVersions": [],
+          "apiVersion": 0,
+          "useApi": false,
+          "getLyricType": 3,
+          "remarks": "只能在歌词界面显示"
+        }
+      ]
     }
   ],
   "appRulesVersion": 17,
