--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ material = "1.12.0"
 swiperefreshlayout = "1.2.0-beta01"
 modernandroidpreferences = "2.3.2"
 markwonversion = "4.6.2"
+preference-ktx = "1.2.1"
 
 [libraries]
 material = { module = "com.google.android.material:material", version.ref = "material" }
@@ -33,6 +34,7 @@ lyricGetter-api = { module = "com.github.xiaowine:Lyric-Getter-Api", version = "
 xkt = { module = "com.github.xiaowine:XKT", version = "1.0.12" }
 dsp = { module = "com.github.xiaowine:dsp", version = "1.1.3" }
 cardSlider = { module = "com.github.IslamKhSh:CardSlider", version = "1.0.1" }
+preference-ktx = { group = "androidx.preference", name = "preference-ktx", version.ref = "preference-ktx" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
