--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ swiperefreshlayout = "1.2.0-beta01"
 modernandroidpreferences = "2.3.2"
 markwonversion = "4.6.2"
 preference-ktx = "1.2.1"
+cardview = "1.0.0"
 
 [libraries]
 material = { module = "com.google.android.material:material", version.ref = "material" }
@@ -35,6 +36,7 @@ xkt = { module = "com.github.xiaowine:XKT", version = "1.0.12" }
 dsp = { module = "com.github.xiaowine:dsp", version = "1.1.3" }
 cardSlider = { module = "com.github.IslamKhSh:CardSlider", version = "1.0.1" }
 preference-ktx = { group = "androidx.preference", name = "preference-ktx", version.ref = "preference-ktx" }
+cardview = { group = "androidx.cardview", name = "cardview", version.ref = "cardview" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
