fix:继续优化设置界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
             tools:targetApi="tiramisu">
         <activity
                 android:name="cn.lyric.getter.ui.activity.MainActivity"
+                android:windowSoftInputMode="adjustPan"
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
