--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" tools:ignore="QueryAllPackagesPermission" />
+    <uses-permission
+        android:name="android.permission.QUERY_ALL_PACKAGES"
+        tools:ignore="QueryAllPackagesPermission" />
 
     <application
-            android:name=".ui.App"
-            android:enableOnBackInvokedCallback="true"
-            android:icon="@drawable/ic_launcher"
-            android:label="@string/app_name"
-            android:supportsRtl="true"
-            android:theme="@style/Theme.MyApplication"
-            tools:targetApi="tiramisu">
+        android:name=".ui.App"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.MyApplication">
         <activity
-                android:name="cn.lyric.getter.ui.activity.MainActivity"
-                android:windowSoftInputMode="adjustPan"
-                android:exported="true">
+            android:name="cn.lyric.getter.ui.activity.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,10 +24,10 @@
             </intent-filter>
         </activity>
         <activity-alias
-                android:name=".launcher"
-                android:enabled="true"
-                android:exported="true"
-                android:targetActivity="cn.lyric.getter.ui.activity.MainActivity">
+            android:name=".launcher"
+            android:enabled="true"
+            android:exported="true"
+            android:targetActivity="cn.lyric.getter.ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -36,19 +35,19 @@
         </activity-alias>
 
         <meta-data
-                android:name="xposeddescription"
-                android:value="@string/xposed_desc" />
+            android:name="xposeddescription"
+            android:value="@string/xposed_desc" />
         <meta-data
-                android:name="xposedminversion"
-                android:value="93" />
+            android:name="xposedminversion"
+            android:value="93" />
         <meta-data
-                android:name="xposedsharedprefs"
-                android:value="true" />
+            android:name="xposedsharedprefs"
+            android:value="true" />
         <meta-data
-                android:name="xposedscope"
-                android:resource="@array/need_module" />
+            android:name="xposedscope"
+            android:resource="@array/need_module" />
         <meta-data
-                android:name="Getter_Version"
-                android:value="6" />
+            android:name="Getter_Version"
+            android:value="6" />
     </application>
 </manifest>
